--- a/css/global.css
+++ b/css/global.css
@@ -66,7 +66,17 @@ header .subtitle {
 }
 
 #register-button {
-	margin: 10px 0;
+    display: block;
+    margin: 0;
+    padding: 10px 0;
+    background: white;
+}
+
+#register-button.stuck {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
 }
 
 #register-button a {
@@ -80,6 +90,11 @@ header .subtitle {
 	background-color: #e00000;
 	border: 1px solid #b00000;
 	display: block;
+    margin: 0;
+}
+
+#register-button.stuck a {
+    margin: 0 10px;
 }
 
 /* NAVIGATION */
