add border to speaker bio show/hide link

--- a/css/global.css
+++ b/css/global.css
@@ -150,6 +150,8 @@ ul.speakers .showhide {
 }
 
 ul.speakers .showhide a {
+    padding: 2px 4px;
+    border: 1px solid #aaa;
     color: #aaa;
     text-decoration: none;
     text-transform: uppercase;
