--- a/css/global.css
+++ b/css/global.css
@@ -84,6 +84,7 @@ header .subtitle {
     font-size: 0.8em;
     text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
     color: white;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
     padding: 8px 15px;
