no speaker bios, so remove the bio show/hide functionality

--- a/css/wide.css
+++ b/css/wide.css
@@ -146,13 +146,8 @@ ul.speakers li img {
     height: auto;
 }
 
-ul.speakers .showhide {
-    display: none;
-}
-
 ul.speakers p {
-    visibility: visible;
-    display: block;
+    height: 3em;
 }
 
 ul.speakers li * {
