--- a/css/global.css
+++ b/css/global.css
@@ -109,6 +109,27 @@ nav {
 #intro {
     color: #d0d0d0;
     background: black;
+    position: relative;
+    z-index: -3;
+}
+
+#intro:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: black url('../images/chalkboard-bg.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    z-index: -2;
+}
+
+#intro .inner {
+    overflow: hidden;
+    z-index: -1;
 }
 
 #intro h2 {
