--- a/css/wide.css
+++ b/css/wide.css
@@ -170,8 +170,23 @@ ul.speakers li * {
     margin-right: 20px;
 }
 
+/* REGISTRATION */
+
+.reg-info>div {
+    width: 28%;
+    float: left;
+    border: 1px solid #ddd;
+    margin-right: 6%;
+    box-shadow: 0 0 5px rgba(64, 64, 64, 0.3);
+    min-height: 160px;
+}
+
+.reg-info>div:last-child {
+    margin-right: 0;
+}
+
 /* FOOTER */
 
 footer {
-    min-height: 500px;
+    min-height: 300px;
 }
