--- a/css/wide.css
+++ b/css/wide.css
@@ -15,13 +15,6 @@ header, section, footer {
     max-width: 980px;
 }
 
-.image-wrap {
-    background-color: white;
-    margin: 0;
-    padding: 8px;
-    border: 1px solid #ccc;
-}
-
 /* HEADER */
 
 header {
@@ -134,6 +127,14 @@ ul.speakers li {
     width: 25%;
 }
 
+.image-wrap {
+    background-color: white;
+    margin: 0;
+    padding: 4px;
+    border: 1px solid #ccc;
+    margin-right: 2em;
+}
+
 ul.speakers li img {
     padding: 0;
     margin: 0;
@@ -143,12 +144,17 @@ ul.speakers li img {
     height: auto;
 }
 
-ul.speakers p {
-    height: 3em;
+ul.speakers .showhide {
+    display: none;
 }
 
-ul.speakers li * {
-    margin-right: 20px;
+ul.speakers p.biography {
+    visibility: visible;
+    display: block;
+}
+
+ul.speakers li p {
+    margin-right: 2em;
 }
 
 /* SPONSORS */
